--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,3 +51,57 @@ html, body {
 .read-the-docs {
   color: #888;
 }
+
+.container {
+  max-width: 100%;
+  margin: auto;
+  background: white;
+  padding: 40px;
+}
+
+h1, h2 {
+  margin-bottom: 5px;
+}
+
+p, li {
+  color:rgb(141, 140, 140);
+  margin-top: 5px; 
+}
+.mission-box {
+  background: white;
+  padding: 15px;
+  border-radius: 5px;
+  margin-top: 10px;
+  height: auto;
+  border: 1px solid;
+  border-color: rgb(211, 211, 211);
+}
+
+.team-section {
+  text-align: center;
+}
+.team-members {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+.team-card {
+  background: white;
+  padding: 15px;
+  text-align: center;
+  width: 120px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+.team-card img {
+  width: 100%;
+  height: 80px;
+  background: #ddd;
+  border-radius: 5px;
+}
+.footer {
+  text-align: center;
+  padding: 20px;
+  font-size: 0.9em;
+}
